--- a/portal/templates/gil/alonzo_mccann_story.html
+++ b/portal/templates/gil/alonzo_mccann_story.html
@@ -1,4 +1,6 @@
 {% extends "gil/lived_experience_base.html" %}
+{% block title %}Truenth Lived Experience - Alonzo McCann Story{% endblock %}
+{% block head %}{{super()}}{% endblock %}
 {% block main %}
     <main class="main main--story">
       {{super()}}
