--- a/portal/templates/gil/contact.html
+++ b/portal/templates/gil/contact.html
@@ -1,4 +1,6 @@
 {% extends "gil/base.html" %}
+{% block title %}Contact Truenth{% endblock %}
+{% block head %}{{super()}}{% endblock %}
 {% block main %}
     <main class="main">
       {{super()}}
