--- a/portal/templates/gil/portal.html
+++ b/portal/templates/gil/portal.html
@@ -1,5 +1,7 @@
 {%- from "gil/macros.html" import footerHTML -%}
 {%- extends "gil/base.html" -%}
+{% block title %}Truenth Dashboard{% endblock %}
+{% block head %}{{super()}}{% endblock %}
 {% block main %}
 {{ super() }}
 <main id="portalMain" class="main home--container">
