--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -22,7 +22,7 @@
     }
 </style>
 <div id="fullSizeBox" class="box-min-500">
-    <img  src="{{ url_for('static', filename='img/spacer.jpg') }}" class="tnth-image img-responsive hidden-xs" style="visibility:hidden"/>
+    <img  src="{{ url_for('static', filename='img/spacer.jpg') }}" class="tnth-image img-responsive hidden-xs" style="visibility:hidden" alt="spacer image"/>
     <div id="fullSizeContainer">
 
         <div class="text-center"><a href="/"><img id="fullSizeLogo" src="{{ url_for('static', filename='img/logo_wordmark.png') }}" alt="TrueNTH" /></a></div>
