--- a/portal/templates/flask_user/_macros.html
+++ b/portal/templates/flask_user/_macros.html
@@ -4,7 +4,7 @@
             {% if not label %}{% set label=field.label.text %}{% endif %}
             <label for="{{ field.id }}" class="control-label">{{ label|safe }}</label>
         {% endif %}
-        {{ field(class_='form-control', placeholder=label, **kwargs) }}
+        {{ field(class='form-control', placeholder=label, **kwargs) }}
         <div class="help-block with-errors" id="error{{ field.id }}">
             {% if field.errors %}
                 {% for e in field.errors %}
