--- a/portal/templates/gil/404.html
+++ b/portal/templates/gil/404.html
@@ -1,4 +1,6 @@
 {% extends "gil/base.html" %}
+{% block title %}Truenth Page Not Found{% endblock %}
+{% block head %}{{super()}}{% endblock %}
 {% block main %}
     <main class="main">
       {{super()}}
