--- a/portal/templates/gil/david_andrew_story.html
+++ b/portal/templates/gil/david_andrew_story.html
@@ -1,4 +1,6 @@
 {% extends "gil/lived_experience_base.html" %}
+{% block title %}Truenth Lived Experience - David and Andrew Perez Story{% endblock %}
+{% block head %}{{super()}}{% endblock %}
 {% block main %}
     <main class="main main--story">
       {{super()}}
@@ -38,7 +40,7 @@
         <div class="module">
           <div class="module__body">
               <figure>
-                <img src="{{ url_for('static', filename='img/LE_David_Andrew_Perez_Single.jpg') }}">
+                <img src="{{ url_for('static', filename='img/LE_David_Andrew_Perez_Single.jpg') }}" alt="David and Andrew Perez">
                 <figcaption>David and Andrew Perez, Los Angeles, 2016</figcaption>
               </figure>
           </div>
