--- a/portal/templates/gil/exercise-and-diet.html
+++ b/portal/templates/gil/exercise-and-diet.html
@@ -1,4 +1,6 @@
 {% extends "gil/base.html" %}
+{% block title %}Truenth Exercise and Diet{% endblock %}
+{% block head %}{{super()}}{% endblock %}
 {% block main %}
     <main class="main">
       {{super()}}
