--- a/portal/templates/gil/lived-experience.html
+++ b/portal/templates/gil/lived-experience.html
@@ -1,4 +1,6 @@
 {% extends "gil/lived_experience_base.html" %}
+{% block title %}Truenth Lived Experience{% endblock %}
+{% block head %} {{super()}}{% endblock %}
 {% block main %}
     <main class="main main--white">
       {{super()}}
@@ -24,7 +26,7 @@
       <div class="module-wrap module-wrap--background module-wrap--background__alonzo">
            <div class="module">
             <p class="module__heading">ALONZO McCANN</p>
-            <img src="{{ url_for('static', filename='img/LE_Alonzo_McCann_Mobile.jpg') }}" class="mobile">
+            <img src="{{ url_for('static', filename='img/LE_Alonzo_McCann_Mobile.jpg') }}" class="mobile" alt="Alonzo McCann Mobile Image">
             <p class="module__body">Alonzo McCann is a Detroit football coach, preacher, husband and father. After one of the darkest periods of his life, he now reflects on the route he took through recovery.</p>
             <div class="button-callout"><a class="button button--large button--brown" href="{{PORTAL}}{{url_for('portal.stories',page_name='alonzo-mccann-story')}}">Watch Alonzo's Film</a></div>
            </div>
@@ -32,19 +34,17 @@
       <div class="module-wrap module-wrap--background module-wrap--background__andrew blue-theme">
         <div class="module">
           <p class="module__heading">DAVID AND ANDREW PEREZ</p>
-          <img src="{{ url_for('static', filename='img/LE_David_Andrew_Perez_Mobile.jpg') }}" class="mobile">
+          <img src="{{ url_for('static', filename='img/LE_David_Andrew_Perez_Mobile.jpg') }}" class="mobile" alt="David and Andrew Perez Mobile Image">
           <p class="module__body">Andrew proved he would be there for his father as he began his Prostate Cancer journey.</p>
           <div class="button-callout"><a class="button button--large button--brown" href="{{PORTAL}}{{url_for('portal.stories',page_name='david-andrew-story')}}">READ DAVID AND ANDREW'S STORY</a></div>
-           </div>
         </div>
       </div>
       <div class="module-wrap module-wrap--background module-wrap--background__twins">
         <div class="module">
           <p class="module__heading">THE HIRSCH BROTHERS</p>
-          <img src="{{ url_for('static', filename='img/LE_Hirsch_Brothers_Mobile.jpg') }}" class="mobile">
+          <img src="{{ url_for('static', filename='img/LE_Hirsch_Brothers_Mobile.jpg') }}" class="mobile" alt="Hirsch Brothers Mobile Image">
           <p class="module__body">Twin brothers Mark and Jon Hirsch learned how family history and early detection would play a role in their shared Prostate Cancer journey.</p>
           <div class="button-callout"><a class="button button--large button--brown" href="{{PORTAL}}{{url_for('portal.stories', page_name='hirsch-brothers-story')}}">Watch Mark and Jon's Film</a></div>
-           </div>
         </div>
       </div>
     </main>
