--- a/portal/templates/gil/privacy.html
+++ b/portal/templates/gil/privacy.html
@@ -1,4 +1,6 @@
 {% extends "gil/base.html" %}
+{% block title %}Truenth Privacy Statement{% endblock %}
+{% block head %}{{super()}}{% endblock %}
 {% block main %}
     <main class="main">
       {{ super() }}
