--- a/portal/templates/gil/terms.html
+++ b/portal/templates/gil/terms.html
@@ -1,4 +1,6 @@
 {% extends "gil/base.html" %}
+{% block title %}Truenth Terms and Conditions{% endblock %}
+{% block head %}{{super()}}{% endblock %}
 {% block main %}
     <main class="main">
       {{ super()}}
