--- a/portal/templates/staff_profile_create.html
+++ b/portal/templates/staff_profile_create.html
@@ -4,11 +4,7 @@
 {% from "profile_macros.html" import profileName, profileBirthDate, profileEmail, profilePhone, profileAltPhone, profileSaveBtn %}
 {% from "initial_queries_macros.html" import consent_fields %}
 <br/>
-<style>
-.pc-hr {
-    border-top: 1px solid #ddd;
-}</style>
-<form id="createProfileForm" class="form tnth-form to-validate" role="form">
+<form id="createProfileForm" class="form tnth-form to-validate">
     <input type="hidden" id="current_user_email" value="{{user.email}}" />
     <div class="row">
         <div class="col-md-11">
@@ -28,7 +24,7 @@
                     </div>
                     <div class="form-group float-input-label profile-section" id="emailGroup">
                         <label for="email">{{ _("Email Address") }}</label>
-                        <input type="text" class="form-control" id="email" name="email" autocomplete="false" error-field="erroremail" placeholder="{{ _('Email Address') }}" value="" data-customemail="true" required />
+                        <input type="text" class="form-control" id="email" name="email" autocomplete="off" data-error-field="erroremail" placeholder="{{ _('Email Address') }}" value="" data-customemail="true" required />
                         <div class="help-block with-errors" id="erroremail"></div>
                     </div>
                     {{profilePhone(False)}}
@@ -78,7 +74,7 @@
             <br/>
             <div>
                 {{ back_btn('staff','Staff List')}}
-                <a href="javascript:void()" style="visibility:hidden" id="profileBackLink"></a>
+                <a href="#" style="visibility:hidden" id="profileBackLink"></a>
             </div>
             </div>
             </div>
